introducing java enhancer $(obj)